src/test/deca/syntax/valid/custom/return/return_funct.deca
// Description:
//   Return with condition function.
// Results:
//
//
// History:
//    created on 13/01/2022

{
   return func(a);
}
