src/test/deca/syntax/invalid/custom/object/return_funct.deca
// Description:
//   Return with condition function.
// Results:
//
//
// History:
//    created on 13/01/2022

{
   retur func(a);
}
